tests/baselines/reference/systemModule8.errors.txt
tests/cases/compiler/systemModule8.ts(19,1): error TS7027: Unreachable code detected.


==== tests/cases/compiler/systemModule8.ts (1 errors) ====
    
    export var x;
    x = 1;
    x++;
    x--;
    ++x;
    --x;
    x += 1;
    x -= 1;
    x *= 1;
    x /= 1;
    x |= 1;
    x &= 1;
    x + 1;
    x - 1;
    x & 1;
    x | 1;
    for (x = 5;;x++) {}
    for (x = 8;;x--) {}
    ~~~
!!! error TS7027: Unreachable code detected.
    for (x = 15;;++x) {}
    for (x = 18;;--x) {}
    
    for (let x = 50;;) {}
    function foo() {
        x = 100;
    }
    
    export let [y] = [1];
    export const {a: z0, b: {c: z1}} = {a: true, b: {c: "123"}};
    for ([x] of [[1]]) {}